@@ -34,7 +34,7 @@
 		rev="1.5"/>
     <dependency org="com.thoughtworks.paranamer" name="paranamer-ant"
 		rev="1.5"/>
-    <dependency org="org.testng" name="testng" rev="5.8" transitive="false">
+    <dependency org="org.testng" name="testng" rev="5.9" transitive="false">
       <artifact name="testng" type="jar" ext="jar" e:classifier="jdk15"/>
     </dependency>
   </dependencies>
